<resources>
    <string name="app_name">凡易贷</string>
    <string name="loan">得贷</string>
    <string name="chamberlain">管家</string>
    <string name="mine">我的</string>
    <string name="easy_loan">凡易贷</string>
    <string name="name">姓名</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_psw">请输入密码</string>
    <string name="sure_psw">确认密码</string>
    <string name="reset_psw">重置密码</string>
    <string name="login">登陆</string>
    <string name="login_name">登陆名称</string>
    <string name="input_login_name">请输入登陆名称</string>
    <string name="input_login_psw">请输入登陆密码</string>
    <string name="login_password">登陆密码</string>
    <string name="registered">注册</string>
    <string name="forget_psw">忘记密码</string>
    <string name="forget_psw_orange">忘记密码?</string>
    <string name="tel_num">手机号</string>
    <string name="service_num">服务号</string>
    <string name="input_tel_num">请输入手机号码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="input_old_psw">请输入原密码</string>
    <string name="input_new_psw_again">请再次输入新密码</string>
    <string name="verification_code">获取验证码</string>
    <string name="input_service_code">请输入服务码</string>
    <string name="verify_code">验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="seeting_psw">设置密码</string>
    <string name="invitation_code">邀请码 (选填)</string>
    <string name="optional_invitation_code">邀请码</string>
    <string name="sure_register">确认注册</string>
    <string name="sure_register_msg">确定注册即代表您同意《得亨凡易贷平台免费声明》</string>
    <string name="find_password">找回密码</string>
    <string name="modify_password">密码修改</string>
    <string name="verification">验证</string>
    <string name="new_psw">新密码</string>
    <string name="cacal">取消</string>
    <string name="phone">手机</string>
    <string name="complete">完成</string>
    <string name="refresh">刷新</string>
    <string name="loan_faild">加载失败...</string>
    <string name="verification_ok">您已经通过审核无需修改</string>
    <string name="verified">实名认证</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="actual_name">  真实姓名</string>
    <string name="input_actual_name">请输入真实姓名</string>
    <string name="id_card_num">身份证号码</string>
    <string name="input_id_card_num">请输入身份证号码</string>
    <string name="next_step">下一步</string>
    <string name="sure">确认</string>
    <string name="delete">删除</string>
    <string name="upload_faild">上传失败</string>
    <string name="save">保存</string>
    <string name="aggress">同意</string>
    <string name="cancel">取消</string>
    <string name="bind">绑定</string>
    <string name="top_remind_msg_verified">请输入您的真实信息，虚假信息会影响您的信用！</string>
    <string name="pass_verified">您已经通过了实名认证！</string>
    <string name="document_upload">证件上传</string>
    <string name="document_type">证件类型</string>
    <string name="input_document_type">请输入相关证件名称</string>
    <string name="upload_complete">上传完成</string>
    <string name="uploading">正在上传中...</string>
    <string name="camera">相机</string>
    <string name="gallery">从手机相册选择</string>
    <string name="id_card">身份证</string>
    <string name="top_remind_msg_upload">同意《芝麻信用协议以及授权条款》</string>
    <string name="input_upload_card">请上传您的身份证照片</string>
    <string name="pass_upload">已通过身份证验证</string>
    <string name="info_complete">完善信息</string>
    <string name="not_verified">未认证</string>
    <string name="already_verified">已认证</string>
    <string name="verifieding">审核中</string>
    <string name="not_add">未添加</string>
    <string name="sesame_points">芝麻分</string>
    <string name="bank_card">银行卡</string>
    <string name="contact">联系人</string>
    <string name="emergency_contact">紧急联系人</string>
    <string name="phone_certification">手机认证</string>
    <string name="now_address">现住地址</string>
    <string name="father">父亲</string>
    <string name="mother">母亲</string>
    <string name="counselor">辅导员</string>
    <string name="classmates">同学</string>
    <string name="input_relative_name">请输入关系人姓名</string>
    <string name="input_relative_tel">请输入关系人电话</string>
    <string name="verified_center">认证中心</string>
    <string name="loan_recording">借款记录</string>
    <string name="repayment_recording">还款记录</string>
    <string name="overdue_time">逾期次数</string>
    <string name="bank_car_manager">银行卡管理</string>
    <string name="seeting">设置</string>
    <string name="title_activity_info_complete">InfoCompleteActivity</string>
    <string name="base_certification">基础额度认证</string>
    <string name="promotion_certification">提升额度认证</string>
    <string name="promotion_certification_title">提额认证</string>
    <string name="start_certification">  &gt;开始认证&lt;</string>
    <string name="match_quota">匹配额度中</string>
    <string name="match_quota_title">匹配额度</string>
    <string name="matcg_quota_message">请耐心等待工作人员处理</string>
    <string name="input_sure_address">请输入正确住址信息，虚假信息会影响您的信用</string>
    <string name="input_detail_address">请输入地址街道门牌号</string>
    <string name="base_certificationn_title">基础认证</string>
    <string name="reserved_bank_card">预留银行卡</string>
    <string name="current_address">所在地址</string>
    <string name="choose_address">请选择地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="adjust_contacts">是否允许获取通讯录</string>
    <string name="adjust_contacts_msg">我们会妥善保管您的宝贵信息请您放心</string>
    <string name="relationship">关系</string>
    <string name="emergency_name_remind">添加姓名</string>
    <string name="emergency_number_remind">添加号码</string>
    <string name="pass_address">您已通过地址认证</string>
    <string name="input_address">请输入您的地址</string>
    <string name="my_billing">我的账单</string>
    <string name="promotion_quota">额度提升</string>
    <string name="need_repayment">我要还款</string>
    <string name="nomal_loan">正常借款</string>
    <string name="staging_loan">分期借款</string>
    <string name="staging_detail">分期详情</string>
    <string name="right_repayment">立即还款</string>
    <string name="right_loan">立即借款</string>
    <string name="right_application">立即借款</string>
    <string name="right_loan_msg">借款本金及利息 (元)</string>
    <string name="right_repayment_msg">未还本金及利息 (元)</string>
    <string name="data_detail">本期借款明细</string>
    <string name="data_detail_repatment">本期还款明细</string>
    <string name="loan_style">借款方式</string>
    <string name="repayment_style">还款方式</string>
    <string name="loan_sum">借款金额</string>
    <string name="loan_protocol">《凡易贷平台协议》</string>
    <string name="already_read_protocol">我已阅读平台协议</string>
    <string name="expand_to_view">展开查看</string>
    <string name="loan_application">借款申请</string>
    <string name="application_result">申请结果</string>
    <string name="application_summit_success">申请提交成功</string>
    <string name="application_summit_msg">申请已提交请耐心等待</string>
    <string name="application_summit_msg_repayment">等待后台审核结果</string>
    <string name="application_success">申请成功</string>
    <string name="look_billing">请查看我的账单</string>
    <string name="go_choose">去选择</string>
    <string name="periods">期数</string>
    <string name="periods_money">每期应还</string>
    <string name="periods_interest">每期利息</string>
    <string name="repayment">还款</string>
    <string name="repayment_sum">还款额度</string>
    <string name="nomal_repayment">正常还款</string>
    <string name="periods_repayment">分期还款</string>
    <string name="sure_repayment">确认还款</string>
    <string name="no_bill_data">暂无借款记录</string>
    <string name="no_repayment_data">暂无还款记录</string>
    <string name="right_now_loan">马上借钱</string>
    <string name="loan_detail">借款详情</string>
    <string name="psw_modify">密码修改</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_msg">写下你的意见以及反馈</string>
    <string name="feedback_msg_phone">填写您的手机或者邮箱</string>
    <string name="call_phone">联系电话</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_msg">凡易贷是杭州得亨借贷集团旗下app拥有市场占有率高达80%拥有非常功能和人性化流程</string>
    <string name="exit">退出登录</string>
    <string name="submit">提交</string>
    <string name="call_phone_msg">得亨借贷官方客服服务时间为9:00-23：00</string>
    <string name="call_phone_num">拨打电话</string>
    <string name="icbc">中国工商银行</string>
    <string name="ccb">中国建设银行</string>
    <string name="cbm">中国交通银行</string>
    <string name="boc">中国银行</string>
    <string name="abc">中国农业银行</string>
    <string name="debit_card">储蓄卡</string>
    <string name="credit_card">信用卡</string>
    <string name="no_card">暂无银行卡</string>
    <string name="card_choose">银行卡选择</string>
    <string name="card_supposed">目前只支持国有五大银行</string>
    <string name="add_bank_card">+添加银行卡</string>
    <string name="add_bank_card_title">添加银行卡</string>
    <string name="card_holder">持卡人</string>
    <string name="bank_card_num">银行卡号</string>
    <string name="reserved_num">预留号码</string>
    <string name="input_bank_card_num">请输入银行卡号</string>
    <string name="input_card_holder">请输入持卡人姓名</string>
    <string name="bind_bank_card_msg">请绑定持卡本人有效银行卡</string>
    <string name="company_info">公司信息</string>
    <string name="company_name">公司名称</string>
    <string name="company_plane">公司座机</string>
    <string name="unit_info">单位信息</string>
    <string name="unit_name">单位名称</string>
    <string name="unit_plane">单位座机</string>
    <string name="work_position">工作职位</string>
    <string name="work_age">工作年限</string>
    <string name="entry_time">入职时间</string>
    <string name="salary">薪资填写</string>
    <string name="input_company_name">请输入公司名称</string>
    <string name="input_company_plane">请输入公司座机</string>
    <string name="input_unit_name">请输入单位名称</string>
    <string name="input_unit_plane">请输入单位座机</string>
    <string name="input_work_position">请输入工作职位</string>
    <string name="input_work_age">请输入工作年限</string>
    <string name="input_entry_time">请输入入职时间</string>
    <string name="input_salary">请输入薪资情况</string>
    <string name="work_permit">工作证/入职协议</string>
    <string name="company_pic">公司照片</string>
    <string name="unit_pic">单位照片</string>
    <string name="continue_uploading">继续上传</string>
    <string name="no_find_area">暂无社保地区</string>
    <string name="top_remind">请输入准确信息，虚假信息会影响您的信用</string>
    <string name="chamberlain_txt_msg">你好我是客服小易，你有什么问题咨询 直接拨打“400-8888-3410”</string>
    <string name="service_time">服务时间: 9:00-23:00</string>
    <string name="common_problem">常见问题</string>
    <string name="loan_problem">借款问题</string>
    <string name="help_center">帮助中心</string>
    <string name="increase_amout">额度提升</string>
    <string name="identity_selection">身份选择</string>
    <string name="student">学生</string>
    <string name="salary_name">工薪</string>
    <string name="other">其他</string>
    <string name="property_info">房产信息</string>
    <string name="property_doc_info">房产证信息</string>
    <string name="property_doc_logo_info">房产证印章部分</string>
    <string name="car_info">车辆信息</string>
    <string name="driving_license_face">行驶证正面</string>
    <string name="driving_license_nagative">行驶证反面</string>
    <string name="top_remind_increate">您已经完成基础信息认证,请提交更多资料提升额度！</string>
    <string name="top_remind_property">要求印章和房产证信息清晰可见！虚假信息会影响您的信用。</string>
    <string name="top_remind_car">注意,证件内容清晰可见。</string>
    <string name="other_data">其他资料</string>
    <string name="related_documents">相关证件</string>
    <string name="documents_name">证件名称</string>
    <string name="education_info">学历信息</string>
    <string name="science_letter_net_account">学信网账号</string>
    <string name="science_letter_net_psw">学信网密码</string>
    <string name="credit_card_email">信用卡邮箱</string>
    <string name="email_psw">邮箱密码</string>
    <string name="input_science_letter_net_account">请输入学信网账号</string>
    <string name="input_science_letter_net_psw">请输入学信网密码</string>
    <string name="input_credit_card_email">请输入信用卡邮箱</string>
    <string name="input_email_psw">请输入邮箱密码</string>
    <string name="input_msg">请输入要查找的内容</string>
    <string name="agress_science_info">已同意《允许凡易贷访问学信网信息》</string>
</resources>