<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_staging"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hzxm.easyloan.ui.activity.StagingActivity">

    <com.lmz.baselibrary.widget.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titlelayout_showback="true"
        app:titlelayout_title="@string/staging_detail" />

    <include layout="@layout/divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim60"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/periods"
            android:textColor="@color/deep_text_white"
            android:textSize="@dimen/txt20" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/periods_money"
            android:textColor="@color/deep_text_white"
            android:textSize="@dimen/txt20" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/periods_interest"
            android:textColor="@color/deep_text_white"
            android:textSize="@dimen/txt20" />
    </LinearLayout>

    <include layout="@layout/divide_line" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/divide_line" />
</LinearLayout>
