<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shap_top_change_background"
            android:gravity="center"
            android:textColor="@color/home_blue"
            android:text="@string/camera" />

        <include layout="@layout/divide_line" />

        <TextView
            android:id="@+id/tv_photo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shap_top_button_change_background"
            android:gravity="center"
            android:textColor="@color/home_blue"
            android:text="@string/gallery" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shap_change_background"
            android:gravity="center"
            android:textColor="@color/home_blue"
            android:text="@string/cacal" />
    </LinearLayout>
</RelativeLayout>