<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hzxm.easyloan.ui.activity.RegisterActivity">

    <com.lmz.baselibrary.widget.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titlelayout_showback="true"
        app:titlelayout_title="@string/registered" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dim90"
            android:paddingRight="@dimen/dim90">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim90"
                android:layout_marginTop="@dimen/dim120"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dim5">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@color/deep_text_white">

                    <com.lmz.baselibrary.widget.ClearEditText
                        android:id="@+id/et_user_num"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dim40"
                        android:background="@null"
                        android:hint="@string/input_tel_num"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="11"
                        android:textColor="@color/tc_black"
                        android:textColorHint="@color/deep_text_white"
                        android:textSize="@dimen/txt30" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="@dimen/dim5"
                    android:text="@string/verification_code"
                    android:textColor="@color/home_btn_orange"
                    android:textSize="@dimen/txt30" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/home_blue" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim90"
                android:layout_marginTop="@dimen/dim70"
                android:textColorHint="@color/deep_text_white">

                <com.lmz.baselibrary.widget.ClearEditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableBottom="@drawable/bottom_line_blue"
                    android:hint="@string/input_verification_code"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="6"
                    android:textColor="@color/tc_black"
                    android:textColorHint="@color/deep_text_white"
                    android:textSize="@dimen/txt30" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim90"
                android:layout_marginTop="@dimen/dim70"
                android:textColorHint="@color/deep_text_white"
                android:theme="@style/input_edit_orange">

                <com.lmz.baselibrary.widget.ClearEditText
                    android:id="@+id/et_set_psw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableBottom="@drawable/bottom_line_blue"
                    android:hint="@string/input_psw"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/tc_black"
                    android:textColorHint="@color/deep_text_white"
                    android:textSize="@dimen/txt30" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim90"
                android:layout_marginTop="@dimen/dim70"
                android:textColorHint="@color/deep_text_white"
                android:theme="@style/input_edit_orange">

                <com.lmz.baselibrary.widget.ClearEditText
                    android:id="@+id/et_sure_psw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableBottom="@drawable/bottom_line_blue"
                    android:hint="@string/sure_psw"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/tc_black"
                    android:textColorHint="@color/deep_text_white"
                    android:textSize="@dimen/txt30" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim90"
                android:layout_marginTop="@dimen/dim70"
                android:textColorHint="@color/deep_text_white">

                <com.lmz.baselibrary.widget.ClearEditText
                    android:id="@+id/et_invate_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableBottom="@drawable/bottom_line_blue"
                    android:hint="@string/invitation_code"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/tc_black"
                    android:textColorHint="@color/deep_text_white"
                    android:textSize="@dimen/txt30" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sure_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim80"
                android:layout_marginTop="@dimen/dim140"
                android:background="@drawable/select_sure_register_btn"
                android:text="@string/sure_register"
                android:textSize="@dimen/txt34"
                android:textColor="@color/select_white_orange" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim30"
                android:gravity="center"
                android:text="@string/sure_register_msg"
                android:textColor="@color/home_blue"
                android:textSize="@dimen/txt22" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
