<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.hzxm.easyloan.ui.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim100"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim80"
        android:layout_marginLeft="@dimen/dim80"
        android:layout_marginRight="@dimen/dim80"
        android:layout_marginTop="@dimen/dim100">

        <ImageView
            android:layout_width="@dimen/dim60"
            android:layout_height="@dimen/dim60"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/dim20"
            android:src="@drawable/login_user_num" />

        <com.lmz.baselibrary.widget.ClearEditText
            android:id="@+id/et_user_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableBottom="@drawable/bottom_line_blue"
            android:hint="@string/input_user_name"
            android:inputType="number"
            android:lines="1"
            android:maxLength="11"
            android:paddingBottom="@dimen/dim5"
            android:textColor="@color/tc_black"
            android:textSize="@dimen/txt28"
            android:textColorHint="@color/deep_text_white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim80"
        android:layout_marginLeft="@dimen/dim80"
        android:layout_marginRight="@dimen/dim80"
        android:layout_marginTop="@dimen/dim20">

        <ImageView
            android:layout_width="@dimen/dim60"
            android:layout_height="@dimen/dim60"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/dim20"
            android:src="@drawable/login_user_psw" />

        <com.lmz.baselibrary.widget.ClearEditText
            android:id="@+id/et_user_psw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableBottom="@drawable/bottom_line_blue"
            android:ellipsize="end"
            android:hint="@string/input_psw"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="@dimen/txt28"
            android:maxLength="16"
            android:paddingBottom="@dimen/dim5"
            android:textColor="@color/tc_black"
            android:textColorHint="@color/deep_text_white" />
    </LinearLayout>


    <Button
        android:id="@+id/btm_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim90"
        android:layout_marginLeft="@dimen/dim80"
        android:layout_marginRight="@dimen/dim80"
        android:layout_marginTop="@dimen/dim80"
        android:background="@drawable/select_login_btn"
        android:text="@string/login"
        android:textSize="@dimen/txt36"
        android:textColor="@color/select_white_blue" />

    <Button
        android:id="@+id/btm_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim90"
        android:layout_marginLeft="@dimen/dim80"
        android:layout_marginRight="@dimen/dim80"
        android:layout_marginTop="@dimen/dim20"
        android:background="@drawable/select_register_btn"
        android:text="@string/registered"
        android:textSize="@dimen/txt36"
        android:textColor="@color/select_blue_white" />

    <TextView
        android:id="@+id/tv_forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim30"
        android:drawableRight="@drawable/login_forget_psw"
        android:text="@string/forget_psw"
        android:textSize="@dimen/txt24"
        android:textColor="@color/home_blue" />
</LinearLayout>
